# ddv

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  main.cpp  qmlif.cpp  qmlif.h
